# nema-lang

./: .gitignore  LICENSE  MANIFEST.in  README.md  ast_nodes.py  benchmark.py  channel_demo.nema  compiler.py  concurrent.nema  contract_demo.nema  demo_v06.sh  evaluator.py  for_demo.nema  hello.nema  hello.wasm  hello.wat  jit_run.py  kernel.nema  lexer.py  make_demo.py  match_demo.nema  memory.nema  nema.py  parser.py  pyproject.toml  result_demo.nema  set_demo.nema  shiichan.py  stdlib.py  stdlib_demo.nema  typechecker.py  typed.nema  wasm_compiler.py  wasm_enhanced_demo.nema
browser_demo/: demo.nema  demo.wasm  demo.wat  gen.py  index.html
lib/: collections.nema  io.nema  math.nema
