[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "nema-lang"
version = "0.6.0"
description = "Experimental agent-oriented language for compiling NeuroState into control flow"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["language", "compiler", "llvm", "ai", "emotion", "agent", "neurostate"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "llvmlite>=0.43",
]

[project.scripts]
nema = "nema:main"

[project.urls]
Homepage = "https://github.com/kagioneko/nema-lang"
Repository = "https://github.com/kagioneko/nema-lang"
"Bug Tracker" = "https://github.com/kagioneko/nema-lang/issues"

[tool.flit.module]
name = "nema"
